# ea-cmake-build-system

./: README.md
doc/: cmake-cheatsheet.rst
helpers/verify-cmocka-installed/: CMakeLists.txt
libc/: CMakeLists.txt
libc/src/: CMakeLists.txt
libc/test/: CMakeLists.txt
